--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <h3>O numero secreto esta entre <span id="menor-valor">0</span> e <span id="maior-valor">100</span></h3>
 
     <div id="chute" class="mensagem">
-        <div>Voce disse:</div>
+        <!--<div>Voce disse:</div>
         <span class="box">20</span>
-        <div>O numero secreto é maior <i class="fa-solid fa-up-long"></i></div>
+        <div>O numero secreto é maior <i class="fa-solid fa-up-long"></i></div>//-->
     </div>
 
     <script src="app/sortearNumero.js"></script>
+    <script src="app/reconhecimentoDeVoz.js"></script>
 </body>
 </html>
