--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Numero Secreto</title>
 </head>
 <body>
@@ -16,10 +16,12 @@
     <div id="chute" class="mensagem">
         <!--<div>Voce disse:</div>
         <span class="box">20</span>
-        <div>O numero secreto é maior <i class="fa-solid fa-up-long"></i></div>//-->
+        <div>O numero secreto é maior <i class="fa-solid fa-up-long"></i></div>-->
     </div>
 
-    <script src="app/sortearNumero.js"></script>
-    <script src="app/reconhecimentoDeVoz.js"></script>
+    <script src="./app/sortearNumero.js"></script>
+    <script src="./app/reconhecimentoDeVoz.js"></script>
+    <script src="./app/validacao.js"></script>
 </body>
 </html>
+
